# DormIoT-Twin

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  pyproject.toml
docs/: Development-Plan.md  PRD.md  PRD_v2.md
src/dormiot/: ai_diagnoser.py  config.py  data_store.py
src/dormiot/gateway/: mqtt_handler.py  pipeline.py  rule_engine.py
src/dormiot/protocol/: mqtt_simulator.py
src/dormiot/schemas/: __init__.py  alert.py  device.py
src/dormiot/simulation/: cluster.py  device.py  noise.py  publisher.py  state_machine.py  synthesizer.py
src/dormiot/storage/: models.py  redis_cache.py  repository.py
src/dormiot/ui/: charts.py  floor_plan.py  helpers.py
tests/: test_ai_diagnoser.py  test_data_store.py  test_refactoring_phase1.py  test_ui_helpers.py
tests/test_gateway/: test_mqtt.py  test_rule_engine.py
tests/test_protocol/: test_mqtt_simulator.py
tests/test_schemas/: test_alert.py  test_config.py  test_device.py
tests/test_simulation/: test_cluster.py  test_device.py  test_noise.py  test_state_machine.py  test_synthesizer.py
tests/test_storage/: test_redis_cache.py  test_repository.py
