[project]
name = "dormiot-twin"
version = "0.1.0"
description = "基于数字孪生的全景宿舍物联网安全监控系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "paho-mqtt>=1.6,<2",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "streamlit-echarts>=0.4",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dormiot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
