[project]
name = "dormiot-twin"
version = "0.1.0"
description = "基于数字孪生的全景宿舍物联网安全监控系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "plotly>=5.18",
    "loguru>=0.7",
    "pandas>=2.0",
    "numpy>=1.26",
    "langchain>=0.3",
    "langchain-openai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dormiot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
